# qq-robot

./: .gitignore  =0.27.0  AGENTS.md  CHANGES.md  README.md  REFACTOR.md  affection_system.py  bot_agent.py  bot_api.py  config_demo.yaml  config_loader.py  db_utils.py  db_viewer.py  deepseek_api.py  message_store.py  migrate_json_to_db.py  news_service.py  pyproject.toml  qq_api.py  requirements.txt  run.py  run_v2.py  test_agent.py  test_daily_summary.py  test_summary.py
qq_bot/: __init__.py  __main__.py  cli.py
qq_bot/adapters/: __init__.py  base.py  onebot11.py
qq_bot/agent/: __init__.py  classifier.py  intents.py  prompts.py
qq_bot/core/: __init__.py  application.py  config.py  context.py  events.py  exceptions.py  plugin.py  router.py
qq_bot/plugins/: __init__.py
qq_bot/plugins/chat/: __init__.py  affection.py  conversation.py  persona.py  plugin.py
qq_bot/plugins/summary/: __init__.py  plugin.py
qq_bot/services/: __init__.py  news_service.py  summary_service.py
qq_bot/services/daily_summary/: __init__.py  scheduler.py
qq_bot/services/llm/: __init__.py  base.py  deepseek.py
qq_bot/services/storage/: __init__.py  base.py  conversation.py  db.py  message.py
qq_bot/utils/: __init__.py  debug_logger.py  text.py  time.py
robots/: __init__.py  chat.py  daily_summary.py  summary.py
