[project]
name = "bin"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "textual>=8.0.2",
    "tiktoken>=0.12.0",
    "typing-extensions>=4.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]
